# sloth-ci

./: .gitignore  .hgignore  .travis.yml  404.html  DockerFile  Dockerfile  LICENSE  README.md  README.rst  _sloth.py  alt_sloth.conf  api.html  app_config.html  changelog.html  changelog.md  changelog.rst  cli.html  default.conf  extensions.html  index.html  install.sh  pyproject.toml  requirements.txt  run-sloth  run_sloth_win  sample.conf  sample.yml  sconfig.conf  server.conf  server.yml  server_config.html  setup.py  sitemap.xml  sl  sloth-cid  sloth.conf  sloth.py  sloth.yml  sloth_conf.py  startup.py  (+8 more)
.github/workflows/: docs.yml  publish.yml
api/: index.html
app_config/: index.html
changelog/: index.html
cli/: index.html
docs/: Dockerfile  Makefile  README.md  api.rst  apidocs.rst  app-config.rst  cli.rst  conf.py  contents.rst  contribute.rst  examples.rst  extensions.rst  foliant.yml  index.rst  legacy.rst  migrate.rst  mkdocs.yml  quickstart.rst  requirements.txt  sample.yml  server-config.rst  sloth.yml  validators.rst
docs/_samples/: app-config-reference.yml  sloth.yml  timestamper-logged.yml  timestamper.yml
docs/_static/: alabaster.css
docs/_templates/: about.html  layout.html
docs/apidocs/: index.rst  sloth_ci.ext.rst  sloth_ci.rst  sloth_ci.validators.rst
docs/components/: extensions.rst  index.rst  validators.rst
docs/configs/: apps.rst  index.rst  server.rst
docs/cookbook/: index.rst
docs/dev/: devtools.rst  extension.rst  index.rst  validator.rst
docs/news/: hello.rst  index.rst
docs/quickstart-samples/: sloth.yml  timestamper.yml
docs/recipes/: index.rst
docs/ref/: api.rst  app-config.rst  index.rst  server-config.rst
docs/server-config-samples/: sloth.yml
docs/src/: api.md  app_config.md  changelog.md  cli.md  extensions.md  index.md  server_config.md  validators.md
extensions/: index.html
sdocs/: conf.py  contents.rst  contribute.rst  extensions.rst  index.rst  migrate.rst  requirements.txt  validators.rst
search/: search_index.json
server_config/: index.html
sloth/: __init__.py  api.py  install.sh  sloth.py  validators.py
sloth_ci/: __init__.py  api.py  bed.py  cli.py  sloth.py  util.py  utils.py  validators.py
sloth_ci_ext_api/: __init__.py  bed.py
sloth_ci_ext_db/: util.py
test_configs/: test1.conf  test2.conf  test_docker.conf  test_dummy.conf  test_dummy_win.conf  test_ext_win.conf  test_github.conf
validators/: index.html
webface/: index.html  log.html  login.html  logs.html  users.html
(+55 files in other folders)
