[tool.poetry]
name = "sloth-ci"
version = "2.1.3"
description = "Lightweight, standalone CI server."
authors = ["Constantine Molchanov <moigagoo@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
CherryPy = "^18.6.0"
cliar = "^1.3.4"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
Sphinx = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
