[tool.poetry]
name = "sloth-ci"
version = "2.2.1"
description = "Lightweight, standalone CI server."
authors = ["Constantine Molchanov <moigagoo@live.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sloth-ci/sloth-ci/"
keywords = ["ci"]
packages = [
    { include = "sloth_ci" },
    { include = "sloth_ci_ext_api" },
    { include = "sloth_ci_ext_db" },
]

[tool.poetry.dependencies]
python = "^3.9"
CherryPy = "^18.6.0"
cliar = "^1.3.4"
PyYAML = "^5.4.1"
Routes = "^2.5.1"
tabulate = "^0.8.9"
requests = "^2.26.0"
colorama = {version = "^0.4.4", optional = true, extras = ["colored_logs"]}

[tool.poetry.extras]
colored_logs = ["colorama"]

[tool.poetry.dev-dependencies]
foliant = "^1.0.12"
"foliantcontrib.mkdocs" = "^1.0.12"
"foliantcontrib.init" = "^1.0.8"
mkdocs-material = "^7.1.4"
"foliantcontrib.includes" = "^1.1.13"
"foliantcontrib.superlinks" = "^1.0.9"
pylint = "^2.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sloth-ci = 'sloth_ci.cli:main'
sci = 'sloth_ci.cli:main'
